INTERFACCIA user_profile

--- a/app/templates/information_company.html
+++ b/app/templates/information_company.html
@@ -33,7 +33,7 @@
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userMenuButton">
                             <li class="dropdown-header">Welcome {{ user.name if user else '' }}</li>
                             <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="/profile">
+                            <li><a class="dropdown-item" href="/user_profile">
                                 <i class="bi bi-person me-2"></i>Edit Account
                             </a></li>
                             <li><a class="dropdown-item" href="/company_register">
